frame/support/test/tests/pallet_ui/storage_wrong_item.stderr
error: Invalid pallet::storage, expect item type.
  --> $DIR/storage_wrong_item.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
